objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>BANGALORE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CHENNAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDERABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOLKATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUMBAI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>BLACK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BLUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHITE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_name__c</fullName>
        <description>It tells name of the part</description>
        <label>Part name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>p-{00}</displayFormat>
        <label>Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>